fix modal overflow

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -1,5 +1,6 @@
 .modal {
     overflow-y: auto;
+    overflow-x: hidden;
     height: 0;
     opacity: 0;
     z-index: -2;
